<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvSummaryData"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/summary_data_hint"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/answer_hint"
        android:inputType="textMultiLine"
        android:lines="5" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_answer" />

</LinearLayout>
